--- a/GraphicalCoreInterp/WebContent/style.css
+++ b/GraphicalCoreInterp/WebContent/style.css
@@ -1,5 +1,9 @@
 @charset "ISO-8859-1";
 
+*{
+	align-content: center;
+}
+
 body {
 	/* Old browsers */
 	background: #141E30;
@@ -7,10 +11,10 @@ body {
 	background: -webkit-linear-gradient(-45deg, #35577D, #141E30);
 	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	background: linear-gradient(-45deg, #3a5a7e, #141E30);
-	margin: 10px;
-	padding: 0px;
+	margin: 0 auto;
+	padding: 10px;
 	color: white;
-	text-align: left;
+	width: 70%;
 }
 
 h1, h2, h3, h4, h5, label {
@@ -18,18 +22,34 @@ h1, h2, h3, h4, h5, label {
 }
 
 .grammar {
-	width: 70%;
-	background: #111111;
+	width: 850px;
+	background: #211E2F;
 	font-weight: bold;
-	padding-left: 25px;
-	padding-right: 25px;
-	color: green;
-	align-content: center;
+	padding: 10px 25px;
+	color: #e9e9e9;
+	text-align: left;
+	font-family: Monaco,Menlo,"Ubuntu Mono","Droid Sans Mono",Consolas,monospace;
+    overflow: auto;
+    overflow-x: auto;
+    overflow-y: auto;
+    -ms-overflow-style: scrollbar;
+}
+
+.terminal {
+	color: #ff7b64;
+}
+
+.lhs {
+	color: #9a48ff;
+}
+
+.non-terminal {
+	color: #59fff2;
 }
 
 .text-inputs {
 	display: inline-block;
-	padding-right: 10px;
+	margin-right: 10px;
 }
 
 textarea {
